--- a/main/index.html
+++ b/main/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla:400,700">
     <link rel="stylesheet" href="assets/css/styles.css">
+<script defer src="../../scripts/main.js"></script>
 </head>
 
 <body class="d-flex d-md-flex justify-content-center align-items-center justify-content-md-center align-items-md-center" style="background: rgb(47,54,58);/*height: 100vh;*/">
@@ -20,9 +21,6 @@
         <div class="col" style="padding: 0px;margin-top: 6px;"><span style="color: rgb(242,242,242);font-size: 10px;opacity: 0.75;font-family: Karla, sans-serif;">Created By:&nbsp;<a href="https://twitter.com/vastblast" target="_blank" style="color: var(--teal);"><span style="text-decoration: underline;">@VastBlast</span></a>&nbsp;|&nbsp;<a href="https://github.com/VastBlast/ChromeAutoRefresh" target="_blank" style="color: var(--teal);"><span style="text-decoration: underline;">GitHub</span></a></span></div>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/functions.js"></script>
-    <script src="assets/js/background.js"></script>
-    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
