Fixed me messing up the spaces.

--- a/main/index.html
+++ b/main/index.html
@@ -13,7 +13,7 @@
 <body class="new-body">
 <div id="main-container">
     <div id="top-prompt-wrap">
-        <div id="top-prompt">Interval (sec): </div>
+        <div id="top-prompt">Interval (sec):&nbsp</div>
         <input type="number" id="interval" min="0">
     </div>
     <div id="button-group">
@@ -33,9 +33,10 @@
         </div>
     </div>
     <div class="credits">
-        Created By:
-        <a href="https://twitter.com/vastblast" target="_blank">@VastBlast</a> |
-        <a href="https://github.com/VastBlast/ChromeAutoRefresh" target="_blank">GitHub</a>
+        Created By:&nbsp
+        <a href="https://twitter.com/vastblast" target="_blank">@VastBlast&nbsp</a>
+        |
+        <a href="https://github.com/VastBlast/ChromeAutoRefresh" target="_blank">&nbspGitHub</a>
     </div>
 </div>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
